# DooR-API-Server

./: '  .gitignore  CMakeLists.txt  Makefile  README.md  config.toml  door_shm_lib.sh
src/: .door_api_manager.h.swp  .i_subject.h.swp  .main.cpp.swp  Makefile  class.h  door_api_manager.cpp  door_api_manager.h  door_api_worker.cpp  door_api_worker.h  dpi.cpp  dpi.h  i_observer.cpp  i_observer.h  i_subject.cpp  i_subject.h  key_generator.cpp  key_generator.h  main.cpp  observer.cpp  observer.h  server.cpp  server.h  shared_key.cpp  shared_key.h  shared_memory.cpp  shared_memory.h  shared_packet_information.cpp  shared_packet_information.h  socket_ack.h  subject.cpp  unix_domain_socket_server.cpp  unix_domain_socket_server.h  unix_server.cpp  unix_server.h  unix_server_main.cpp  unix_socket.cpp  unix_socket.h  worker.cpp  worker.h  worker_unix_domain_socket_server.cpp  (+1 more)
src/door_api/: CMakeLists.txt  install_manifest.txt
src/door_api/src/: .door_api.h.swp  door_api.cpp  door_api.h  door_socket.h  door_unix_domain_socket_client.cpp  door_unix_domain_socket_client.h  unix_domain_socket_client.cpp  unix_domain_socket_client.h
src/door_ipc/: .CMakeLists.txt.swp  CMakeLists.txt
src/door_ipc/src/: .time_recorder.h.swp  circular_buffer.cpp  circular_buffer.h  dpi.cpp  dpi.h  dpi_socket.h  mmap_ring.cpp  mmap_ring.h  shared_memory.cpp  socket_client.cpp  socket_client.h  socket_server.cpp  socket_server.h  sync_semaphore.cpp  sync_semaphore.h  time_recorder.cpp
src/shared_memory/: CMakeLists.txt  install_manifest.txt  shared_key.cpp  shared_key.h  shared_memory.cpp  shared_memory.h
src/shared_memory/src/: .shared_memory.cpp.swp  dpi.cpp  dpi.h  shared_key.cpp  shared_key.h  shared_memory.cpp  shared_memory.h  shared_packet_information.cpp  shared_packet_information.h  sync_semaphore.h  time_recorder.cpp  time_recorder.h
src/unix_domain_socket_client/: CMakeLists.txt  install_manifest.txt
src/unix_domain_socket_client/src/: .socket_ack.h.swp  .unix_domain_socket_client.cpp.swp  socket_ack.h  unix_domain_socket_client.cpp  unix_domain_socket_client.h
